--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "lucide-vue-next": "^0.469.0",
     "pinia": "^2.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
