--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-notification": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2",
     "lucide-vue-next": "^0.469.0",
     "pinia": "^2.2.8",
