--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-notification": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2",
+    "@vueuse/core": "^12.0.0",
     "lucide-vue-next": "^0.469.0",
     "pinia": "^2.2.8",
     "vue": "^3.5.13",
